[package]
name = "brainfuck-cli"
version = "0.1.3-alpha"
edition = "2021"
description = "A simple Brainfuck CLI interpreter written in Rust"
license = "MIT"
repository = "https://github.com/pedroafabri/brainfuck-cli"

[dependencies]
thiserror = "2.0.12"

[[bin]]
name = "brainfuck"
path = "src/main.rs"